--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "spiderT": "node ./utils/spiderGoogleTranslate.js"
+    "spiderT": "node ./utils/spiderGoogleTranslate.js en ja"
   },
   "dependencies": {
     "chalk": "^4.1.2",
